--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
   padding:0;
   color:#666;
   background:#888;
-  font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size:20px;
 }
 
@@ -178,15 +178,15 @@ form .row:first-child .form-item{border-top:1px solid #fff;
 }
 footer{
   color:#000;
-  background-color:#fff;
+  background-color:rgba(158, 158, 158, 0.18);
   text-align:center;
   box-shadow:0px 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
-footer h3{margin-bottom:10px;color:#1e1e1e;
+footer h3{margin-bottom:5px;color:#1e1e1e;
 }
 #footer-above{padding-top:0px;width:80%;
 }
-#footer-above div{margin-bottom:20px;width:250px;
+#footer-above div{margin-bottom:0px;width:250px;
 }
 #footer-above ul{padding:0;
 }
